Body overflow hidden to prevent scrolling on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,7 @@ body {
   color: #372d43;
   font-family: 'Inconsolata', monospace;
   margin: 0;
+  overflow: hidden;
 }
 
 h1,
